# flyspore

./: CMakeLists.txt  README.md  build.txt  flyspore.sln
core/: AnyValues.cpp  AnyValues.h  CMakeLists.txt  Context.cpp  Context.h  Data.h  DataAdapter.h  DataPack.cpp  DataPack.h  DefaultSchema.cpp  DefaultSchema.h  Object.cpp  Object.h  Path.cpp  Path.h  Pin.cpp  Pin.h  Schema.cpp  Schema.h  Session.cpp  Session.h  Spore.cpp  Spore.h  Statement.h  SyncValueSet.cpp  SyncValueSet.h  WarpPin.h  stealing_queue.h  sync_deque.h  task_pool.h
core/Level0/: AnyValues.h  CMakeLists.txt  Context.cpp  Context.h  Data.h  DataAdapter.h  DataPack.h  DefaultSchema.cpp  DefaultSchema.h  Level0.cpp  Level0.h  Path.cpp  Path.h  Pin.cpp  Pin.h  Schema.h  Session.cpp  Session.h  Spore.cpp  Spore.h  Statement.h  WarpPin.h  lockfree_vector.hpp  sync_deque.h  task_pool.h  workstealing_threadpool.hpp
core/Level1/: Actuator.h  AnyValues.h  BasicNode.cpp  BasicNode.h  BasicNodeList.cpp  BasicNodeList.h  BasicNodeMap.cpp  BasicNodeMap.h  BasicNodeOperator.cpp  BasicNodeOperator.h  CMakeLists.txt  Context.cpp  Context.h  Data.h  DataAdapter.h  DataPack.h  DefaultNest.cpp  DefaultNest.h  DefaultSchema.cpp  DefaultSchema.h  DefaultWarpPin.cpp  DefaultWarpPin.h  Level1.h  Node.h  Path.cpp  Path.h  Pin.cpp  Pin.h  Property.h  PropertyMetaDataManager.cpp  PropertyMetaDataManager.h  PropertyNode.h  Schema.h  Session.cpp  Session.h  Spore.cpp  Spore.h  Statement.h  Traceable.h  WarpPin.h  (+2 more)
core/Level2/: CMakeLists.txt  ConsoleColor.h  Maze.cpp  Maze.h  maze_cmd.txt
flyspore/: CMakeLists.txt  Threads.h  flyspore.cpp  flyspore.vcxproj  flyspore.vcxproj.filters
scripts/buildtool/: linux-gcc.sh  windows-msvc-build.bat
